kustomize-units/neuvector/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neuvector
  # labels:
  #  pod-security.kubernetes.io/enforce: baseline
  #  pod-security.kubernetes.io/audit: restricted
