kustomize-units/neuvector/neuvector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuvector-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: ${NEUVECTOR_DNS}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: neuvector-service
            port:
              number: 443
  tls:
    - secretName: neuvector-tls
      hosts:
      - ${NEUVECTOR_DNS}
